# cosmos-agents

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
scripts/: release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clis.rs  fs_ops.rs  ipc.rs  ipc_server.rs  lib.rs  main.rs  memory.rs  projects.rs  pty_supervisor.rs  status_fsm.rs  store.rs  workspaces.rs
src/components/: AgentCreatorModal.tsx  AgentRow.tsx  CommandPalette.tsx  DiffView.tsx  Editor.tsx  EditorTabs.tsx  FileTree.tsx  InlineEdit.tsx  InputBar.tsx  MarkdownView.tsx  MemoryView.tsx  ProjectCard.tsx  ProjectHeader.tsx  ProjectTitleBar.tsx  RunnerTabs.tsx  Sidebar.tsx  StatusDot.tsx  Terminal.tsx  UpdateBanner.tsx  ViewSwitcher.tsx  WorkflowView.tsx
src/lib/: clis.ts  colorHash.ts  fileIcons.ts  fs.ts  git.ts  ipc.ts  memory.ts  projects.ts  scripts.ts  workspaces.ts
src/stores/: agents.ts  clis.ts  creator.ts  layout.ts  memory.ts  projects.ts  workspaces.ts
