[package]
name = "agent-dashboard"
version = "0.1.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "agent-dashboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Standalone CLI client. Connects to the running Cosmos app's Unix socket so
# spawned agents can register new runners/projects from inside their PTY.
[[bin]]
name = "cosmos"
path = "src/bin/cosmos.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
portable-pty = "0.9.0"
bytes = "1.11.1"
anyhow = "1.0.102"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tauri-plugin-dialog = "2.7.1"
window-vibrancy = "0.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
clap = { version = "4.5", features = ["derive"] }
interprocess = "2"

